tests/errors/sem_call17.java
public class sem_call17 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , i );
}
}